{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 23,
  "lineage": "5289dd6b-0850-49c8-b5a0-d03bed9a280f",
  "resources": [
    {
      "module": "module.namespaces",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "namespaces",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": "production",
          "schema_version": 0,
          "attributes": {
            "id": "production",
            "metadata": [
              {
                "generation": 0,
                "name": "production",
                "resource_version": "1764191973045279008",
                "uid": "75d3a971-bce2-4e66-be21-24b54f1c04f0"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "production"
          },
          "dependencies": [
            "module.cluster.data.google_container_engine_versions.gke_version",
            "module.cluster.google_container_cluster.primary",
            "module.networking.google_compute_firewall.allow_internal",
            "module.networking.google_compute_firewall.allow_nodeports",
            "module.networking.google_compute_firewall.allow_ssh",
            "module.networking.google_compute_network.vpc",
            "module.networking.google_compute_router.nat_router",
            "module.networking.google_compute_router_nat.nat_gateway",
            "module.networking.google_compute_subnetwork.subnet",
            "module.node_pools.google_container_node_pool.node_pools"
          ]
        },
        {
          "index_key": "staging",
          "schema_version": 0,
          "attributes": {
            "id": "staging",
            "metadata": [
              {
                "generation": 0,
                "name": "staging",
                "resource_version": "1764191973059135014",
                "uid": "ec10e4de-461a-4d45-9b81-d14044035984"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "staging"
          },
          "dependencies": [
            "module.cluster.data.google_container_engine_versions.gke_version",
            "module.cluster.google_container_cluster.primary",
            "module.networking.google_compute_firewall.allow_internal",
            "module.networking.google_compute_firewall.allow_nodeports",
            "module.networking.google_compute_firewall.allow_ssh",
            "module.networking.google_compute_network.vpc",
            "module.networking.google_compute_router.nat_router",
            "module.networking.google_compute_router_nat.nat_gateway",
            "module.networking.google_compute_subnetwork.subnet",
            "module.node_pools.google_container_node_pool.node_pools"
          ]
        },
        {
          "index_key": "tools",
          "schema_version": 0,
          "attributes": {
            "id": "tools",
            "metadata": [
              {
                "generation": 0,
                "name": "tools",
                "resource_version": "1764191973059119011",
                "uid": "2d4429e8-ae48-48d2-9350-531e14fd5cc1"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "tools"
          },
          "dependencies": [
            "module.cluster.data.google_container_engine_versions.gke_version",
            "module.cluster.google_container_cluster.primary",
            "module.networking.google_compute_firewall.allow_internal",
            "module.networking.google_compute_firewall.allow_nodeports",
            "module.networking.google_compute_firewall.allow_ssh",
            "module.networking.google_compute_network.vpc",
            "module.networking.google_compute_router.nat_router",
            "module.networking.google_compute_router_nat.nat_gateway",
            "module.networking.google_compute_subnetwork.subnet",
            "module.node_pools.google_container_node_pool.node_pools"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-11-26T12:55:20.561-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/rock-fortress-479417-t5/global/firewalls/ecommerce-devops-vpc-allow-internal",
            "log_config": [],
            "name": "ecommerce-devops-vpc-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/rock-fortress-479417-t5/global/networks/ecommerce-devops-vpc",
            "priority": 1000,
            "project": "rock-fortress-479417-t5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rock-fortress-479417-t5/global/firewalls/ecommerce-devops-vpc-allow-internal",
            "source_ranges": [
              "10.20.0.0/20",
              "10.21.0.0/16",
              "10.22.0.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_nodeports",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "30000-32767"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-26T12:55:20.567-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/rock-fortress-479417-t5/global/firewalls/ecommerce-devops-vpc-allow-nodeports",
            "log_config": [],
            "name": "ecommerce-devops-vpc-allow-nodeports",
            "network": "https://www.googleapis.com/compute/v1/projects/rock-fortress-479417-t5/global/networks/ecommerce-devops-vpc",
            "priority": 1000,
            "project": "rock-fortress-479417-t5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rock-fortress-479417-t5/global/firewalls/ecommerce-devops-vpc-allow-nodeports",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "gke-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-26T12:55:20.372-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/rock-fortress-479417-t5/global/firewalls/ecommerce-devops-vpc-allow-ssh",
            "log_config": [],
            "name": "ecommerce-devops-vpc-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/rock-fortress-479417-t5/global/networks/ecommerce-devops-vpc",
            "priority": 1000,
            "project": "rock-fortress-479417-t5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rock-fortress-479417-t5/global/firewalls/ecommerce-devops-vpc-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/rock-fortress-479417-t5/global/networks/ecommerce-devops-vpc",
            "mtu": 0,
            "name": "ecommerce-devops-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "4109521584879491010",
            "project": "rock-fortress-479417-t5",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rock-fortress-479417-t5/global/networks/ecommerce-devops-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-11-26T12:55:21.070-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/rock-fortress-479417-t5/regions/us-central1/routers/ecommerce-devops-vpc-nat-router",
            "name": "ecommerce-devops-vpc-nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/rock-fortress-479417-t5/global/networks/ecommerce-devops-vpc",
            "project": "rock-fortress-479417-t5",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rock-fortress-479417-t5/regions/us-central1/routers/ecommerce-devops-vpc-nat-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "rock-fortress-479417-t5/us-central1/ecommerce-devops-vpc-nat-router/ecommerce-devops-vpc-nat-gateway",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "ecommerce-devops-vpc-nat-gateway",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "rock-fortress-479417-t5",
            "region": "us-central1",
            "router": "ecommerce-devops-vpc-nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.vpc",
            "module.networking.google_compute_router.nat_router"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-11-26T12:55:20.589-08:00",
            "gateway_address": "10.20.0.1",
            "id": "projects/rock-fortress-479417-t5/regions/us-central1/subnetworks/ecommerce-devops-subnet",
            "ip_cidr_range": "10.20.0.0/20",
            "name": "ecommerce-devops-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/rock-fortress-479417-t5/global/networks/ecommerce-devops-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "rock-fortress-479417-t5",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.21.0.0/16",
                "range_name": "pods-range"
              },
              {
                "ip_cidr_range": "10.22.0.0/20",
                "range_name": "services-range"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/rock-fortress-479417-t5/regions/us-central1/subnetworks/ecommerce-devops-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}